--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "demo": "bun vite dev",
     "dev": "bun startDB.ts && bun run --bun vite dev",
     "build": "vite build",
     "preview": "vite preview",
